--- a/src/messages/develop/general/0002 - Public Message.yaml
+++ b/src/messages/develop/general/0002 - Public Message.yaml
@@ -2,7 +2,7 @@
 # Public Message: Generic public message or public announcement. Sent to an address(es).  Can be used for an official issuer announcement.
 #
 
-id: 0002
+code: 0002
 
 metadata:
   name: PublicMessage
