--- a/src/protocol/develop/actions/G1 - Proposal.yaml
+++ b/src/protocol/develop/actions/G1 - Proposal.yaml
@@ -2,7 +2,7 @@
 # Proposal Action: Allows the Administration/Token Holders to propose a change (aka Initiative/Shareholder vote).  A significant cost - specified in the Contract Formation - can be attached to this action when sent from Token Holders to reduce spam, as the resulting vote will be put to all token owners.
 #
 
-id: G1
+code: G1
 
 metadata:
   name: Proposal
