--- a/src/protocol/develop/actions/G2 - Vote.yaml
+++ b/src/protocol/develop/actions/G2 - Vote.yaml
@@ -2,7 +2,7 @@
 # Vote Action: A vote is created by the Contract in response to a valid Proposal Action.
 #
 
-id: G2
+code: G2
 
 metadata:
   name: Vote
