--- a/src/protocol/develop/actions/G5 - Result.yaml
+++ b/src/protocol/develop/actions/G5 - Result.yaml
@@ -2,7 +2,7 @@
 # Result Action: Once a vote has been completed the results are published. After the result is posted, it is up to the administration to send a contract/asset amendement if appropriate.
 #
 
-id: G5
+code: G5
 
 metadata:
   name: Result
