--- a/src/protocol/develop/actions/E1 - Order.yaml
+++ b/src/protocol/develop/actions/E1 - Order.yaml
@@ -6,12 +6,11 @@
 # R - Reconcile destroys tokens from specified holders to correct after a chain reorg has caused accidental creation of tokens.
 
 code: E1
+name: Order
+label: Order
+description: Used by the administration to signal to the smart contract that the tokens that a particular public address(es) owns are to be confiscated, frozen, thawed or reconciled.
 
 metadata:
-  name: Order
-  label: Order
-  description: >
-    Used by the administration to signal to the smart contract that the tokens that a particular public address(es) owns are to be confiscated, frozen, thawed or reconciled.
   validation: AssetCreation
   rejection: Rejection
 
