--- a/src/protocol/develop/actions/G3 - Ballot Cast.yaml
+++ b/src/protocol/develop/actions/G3 - Ballot Cast.yaml
@@ -3,7 +3,7 @@
 #
 
 code: G3
-ame: BallotCast
+name: BallotCast
 label: Ballot Cast
 description: "Used by Token Owners to cast their ballot (vote) on proposals. 1 Vote per token unless a vote multiplier is specified in the relevant Asset Definition action."
 
