Examples for timestamps.

--- a/src/protocol/develop/actions/C5 - Contract Address Change.yaml
+++ b/src/protocol/develop/actions/C5 - Contract Address Change.yaml
@@ -34,3 +34,4 @@ fields:
     label: Timestamp
     description: "Timestamp in nanoseconds of when the action was created."
     type: Timestamp
+    example: "Wed May 09 2018 00:00:00 GMT+1000 (AEST)"
