--- a/src/protocol/develop/actions/E2 - Freeze.yaml
+++ b/src/protocol/develop/actions/E2 - Freeze.yaml
@@ -51,9 +51,11 @@ fields:
     label: Freeze Period
     description: "Used for a 'time out'.  Tokens are automatically unfrozen after the expiration timestamp without requiring a Thaw Action."
     type: Timestamp
+    example: "Wed May 09 2018 00:00:00 GMT+1000 (AEST)"
 
   - name: Timestamp
     label: Timestamp
     description: "Timestamp in nanoseconds of when the smart contract created the action."
     type: Timestamp
+    example: "Wed May 09 2018 00:00:00 GMT+1000 (AEST)"
     notes: "Cannot be changed by the administration, operator. Smart contract controls."
