--- a/src/protocol/develop/actions/C1 - Contract Offer.yaml
+++ b/src/protocol/develop/actions/C1 - Contract Offer.yaml
@@ -2,7 +2,7 @@
 # Contract Offer Action: The Contract Offer action allows the administration to tell the smart contract what they want the details (labels, data, T&C's, etc.) of the contract to be on-chain in a public and immutable way. The Contract Offer action 'initializes' a generic smart contract that has been spun up by either the smart contract operator or the administration. This on-chain action allows for the positive response from the smart contract with either a Contract Formation Action or a Rejection Action.
 #
 
-id: C1
+code: C1
 
 metadata:
   name: ContractOffer
