Added version to ProtocolAction type and action YAML, to match schema.

--- a/src/protocol/develop/actions/E1 - Order.yaml
+++ b/src/protocol/develop/actions/E1 - Order.yaml
@@ -6,6 +6,7 @@
 # R - Reconcile destroys tokens from specified holders to correct after a chain reorg has caused accidental creation of tokens.
 
 code: E1
+version: 1
 
 metadata:
   name: Order
