--- a/src/protocol/develop/actions/A2 - Asset Creation.yaml
+++ b/src/protocol/develop/actions/A2 - Asset Creation.yaml
@@ -35,6 +35,7 @@ fields:
     description: The index of the asset within the contract. First asset is zero, second is one. Used to derive the asset code.
     type: uint
     size: 8
+    example: 0
 
   - name: AssetAuthFlags
     label: Asset Authorization Flags
@@ -116,6 +117,7 @@ fields:
     description: "A counter for the number of times this asset has been revised using a modification action."
     type: uint
     size: 4
+    example: "456789"
 
   - name: Timestamp
     label: Timestamp
