--- a/src/protocol/develop/actions/G5 - Result.yaml
+++ b/src/protocol/develop/actions/G5 - Result.yaml
@@ -27,6 +27,7 @@ fields:
     label: Asset Specific Vote
     description: "When true this proposal is specific to an asset and the asset type and asset code fields are serialized."
     type: bool
+    example: true
 
   - name: AssetType
     label: Asset Type
@@ -49,6 +50,7 @@ fields:
     label: Specific
     description: "When true the ProposedAmendments field is included and specifies the exact changes to make to the Contract/Asset on chain. When false this is just a general proposal like a strategy/direction and doesn't result in any on chain update."
     type: bool
+    example: true
 
   - name: ProposedAmendments
     label: Proposed Amendments
@@ -68,6 +70,7 @@ fields:
     description: "List of number of valid votes counted for each vote option. Length is encoded like a regular list object, but must match the length of VoteOptions from the Proposal action."
     type: uint64[]
     size: 1
+    example: 8901234567
 
   - name: Result
     label: Result
