--- a/src/protocol/develop/actions/A2 - Asset Creation.yaml
+++ b/src/protocol/develop/actions/A2 - Asset Creation.yaml
@@ -42,6 +42,7 @@ fields:
     description: "A set of switches that define the authorization rules for this asset. See the Authorization Flags documentation for more detail."
     type: varbin
     size: 1
+    example: "0101000"
 
   - name: TransfersPermitted
     label: Transfers Permitted
