No need to include version anymore

--- a/src/assets/develop/utility/CHP - Casino Chip.yaml
+++ b/src/assets/develop/utility/CHP - Casino Chip.yaml
@@ -11,16 +11,8 @@ metadata:
     kind: Utility
 
 fields:
-  - name: Version
-    label: Payload Version
-    description: The version number that this asset payload adheres to.
-    type: uint
-    size: 1
-    example: 0
-    computed: true
-
   - name: CurrencyCode
-    label: Currency
+    label: Currency Code
     type: CurrencyType
     example: AUD
     description: International Organization for Standardization code for Currency. (Specification/Resources)
