--- a/src/actions/develop/actions/M1 - Message.yaml
+++ b/src/actions/develop/actions/M1 - Message.yaml
@@ -33,7 +33,8 @@ fields:
   - name: AddressIndexes
     label: Address Indexes
     description: "Associates the message to a particular output by the index."
-    type: uint16[]
+    type: uint[]
+    size: 2
 
   - name: MessagePayload
     label: Message Payload
