--- a/src/actions/develop/actions/A1 - Asset Definition.yaml
+++ b/src/actions/develop/actions/A1 - Asset Definition.yaml
@@ -41,7 +41,7 @@ fields:
     label: Trade Restrictions
     description: "If specified, the asset can only be traded within the specified trade restriction zone. For example, AUS would restrict to Australian residents only."
     type: Polity[]
-    listSize: medium
+    listSize: small
     example: "GBR"
 
   - name: EnforcementOrdersPermitted
