--- a/src/actions/develop/actions/A2 - Asset Creation.yaml
+++ b/src/actions/develop/actions/A2 - Asset Creation.yaml
@@ -89,7 +89,7 @@ fields:
     description: "Supported values: 1 - Contract-wide Asset Governance.  0 - Asset-wide Asset Governance.  If a referendum or initiative is used to propose a modification to a subfield controlled by the asset auth flags, then the vote will either be a contract-wide vote (all assets vote on the referendum/initiative) or an asset-wide vote (only this asset votes on the referendum/initiative) depending on the value in this subfield.  The voting system specifies the voting rules."
     type: uint
     size: 1
-    intValues:
+    options:
       - 0
       - 1
     example: "1"
