--- a/src/actions/develop/actions/C1 - Contract Offer.yaml
+++ b/src/actions/develop/actions/C1 - Contract Offer.yaml
@@ -47,7 +47,7 @@ fields:
     size: 1
     example: "1"
     notes: "Body of Agreement - Amendments can be restricted to a vote."
-    intValues:
+    options:
       - 1
       - 2
 
