--- a/src/actions/develop/actions/C2 - Contract Formation.yaml
+++ b/src/actions/develop/actions/C2 - Contract Formation.yaml
@@ -39,7 +39,7 @@ fields:
     size: 1
     example: "1"
     notes: "Body of Agreement - Amendments can be restricted to a vote."
-    intValues:
+    options:
       - 1
       - 2
 
