--- a/src/actions/develop/types/Amendment.yaml
+++ b/src/actions/develop/types/Amendment.yaml
@@ -45,7 +45,7 @@ fields:
     size: 1
     description: "0 = Modify. 1 = Add an element to the data to the array of elements. 2 = Delete the element listed in the Element field. The Add and Delete operations only apply to a particilar element of a complex array type. For example, it could be used to remove a particular VotingSystem from a Contract."
     example: 0
-    values:
+    options:
       - 0
       - 1
       - 2
