--- a/src/actions/develop/types/AssetReceiver.yaml
+++ b/src/actions/develop/types/AssetReceiver.yaml
@@ -22,7 +22,7 @@ fields:
     type: uint
     size: 1
     example: 1
-    int_values:
+    options:
       - 0
       - 1
 
@@ -31,26 +31,14 @@ fields:
     description: Specifies the index into the list of oracles in the contract offer that was used to authorize this transfer.
     type: uint
     size: 1
-    include_if_int:
-      field: OracleSigAlgorithm
-      values:
-        - 1
 
   - name: OracleConfirmationSig
     label: Oracle Confirmation Signature
     description: "Length 0-255 bytes. If restricted to a oracle (whitelist) or has transfer restrictions (age, location, investor status): ECDSA+secp256k1 (or the like) signed message provided by an approved/trusted oracle through an API signature of the defined message. If no transfer restrictions(trade restriction/age restriction fields in the Asset Type payload. or restricted to a whitelist by the Contract Auth Flags, it is a NULL field."
     type: varbin
-    include_if_int:
-      field: OracleSigAlgorithm
-      values:
-        - 1
 
   - name: OracleSigBlockHeight
     label: Oracle Signature Block height
     description: The block height of the block hash used in the oracle signature.
     type: uint
     size: 4
-    include_if_int:
-      field: OracleSigAlgorithm
-      values:
-        - 1
