--- a/src/resources/develop/Polities.yaml
+++ b/src/resources/develop/Polities.yaml
@@ -4,6 +4,9 @@ description: >
     Polities (eg. Countries/Nation-States (ISO-3166 Alpha-3),
     Political Unions, International Organizations, etc.).
     Based on a 3 character code.
+codeType:
+    type: fixedchar
+    size: 3
 
 values:
   - code: ALA
