--- a/src/actions/develop/types/TargetAddress.yaml
+++ b/src/actions/develop/types/TargetAddress.yaml
@@ -7,7 +7,7 @@ fields:
   - name: Address
     label: Address
     description: "Public address where the token balance will be changed."
-    type: PublicKeyHash
+    type: Address
 
   - name: Quantity
     label: Quantity
