--- a/src/actions/develop/actions/A2 - Asset Creation.yaml
+++ b/src/actions/develop/actions/A2 - Asset Creation.yaml
@@ -35,12 +35,11 @@ fields:
     size: 8
     example: 0
 
-  - name: AssetAuthFlags
-    label: Asset Authorization Flags
-    description: "A set of switches that define the authorization rules for this asset. See the Authorization Flags documentation for more detail."
+  - name: AssetPermissions
+    label: Asset Permissions
+    description: "A set of permission objects containing switches and field references that define the permissions for modifying this asset. See the Permission documentation for more detail."
     type: varbin
     varSize: small
-    example: "0101000"
 
   - name: TransfersPermitted
     label: Transfers Permitted
@@ -88,7 +87,7 @@ fields:
 
   - name: AssetModificationGovernance
     label: Asset Modification Governance
-    description: "Supported values: 1 - Contract-wide Asset Governance.  0 - Asset-wide Asset Governance.  If a referendum or initiative is used to propose a modification to a subfield controlled by the asset auth flags, then the vote will either be a contract-wide vote (all assets vote on the referendum/initiative) or an asset-wide vote (only this asset votes on the referendum/initiative) depending on the value in this subfield.  The voting system specifies the voting rules."
+    description: "Supported values: 1 - Contract-wide Asset Governance.  0 - Asset-wide Asset Governance.  If a referendum or initiative is used to propose a modification to a subfield controlled by the asset permissions, then the vote will either be a contract-wide vote (all assets vote on the referendum/initiative) or an asset-wide vote (only this asset votes on the referendum/initiative) depending on the value in this subfield.  The voting system specifies the voting rules."
     type: uint
     size: 1
     options:
