--- a/src/actions/develop/types/Entity.yaml
+++ b/src/actions/develop/types/Entity.yaml
@@ -8,6 +8,7 @@ fields:
     label: Name
     description: "Length 1-255 bytes (0 is not valid). Issuing entity (company, organization, individual).  Can be any unique identifying string, including human readable names for branding/vanity purposes. "
     type: varchar
+    varSize: tiny
     example: "Tesla Inc."
 
   - name: Type
@@ -34,19 +35,21 @@ fields:
     label: Building Number
     description: ""
     type: varchar
+    varSize: tiny
     example: "13577"
 
   - name: Street
     label: Street
     description: ""
     type: varchar
-    varSize: small
+    varSize: tiny
     example: "Fairmont Ave"
 
   - name: SuburbCity
     label: Suburb/City
     description: ""
     type: varchar
+    varSize: tiny
     example: "Robinoh"
 
   - name: TerritoryStateProvinceCode
@@ -74,12 +77,14 @@ fields:
     label: Email Address
     description: "Length 0-255 bytes. Address for text-based communication: eg. email address, Bitcoin address"
     type: varchar
+    varSize: tiny
     example: "satoshi@tokenized.com"
 
   - name: PhoneNumber
     label: Phone Number
-    description: "Length 0-50 bytes. 0 is valid. Phone Number for Entity."
+    description: "Length 0-255 bytes. 0 is valid. Phone Number for Entity."
     type: varchar
+    varSize: tiny
     example: "0448484848"
 
   - name: Administration
@@ -91,3 +96,10 @@ fields:
     label: Management
     description: "A list of people in Management Roles for the Entity. e.g CEO, COO, CTO, CFO, Secretary, Executive, etc."
     type: Manager[]
+
+  - name: DomainName
+    label: Domain Name
+    description: "Domain name owned by this entity. Length 0-255 bytes. 0 is valid."
+    type: varchar
+    varSize: tiny
+    example: "tokenized.com"
