Fix description of message receivers.

--- a/src/actions/develop/actions/M1 - Message.yaml
+++ b/src/actions/develop/actions/M1 - Message.yaml
@@ -38,7 +38,7 @@ fields:
 
   - name: ReceiverIndexes
     label: Receiver Indexes
-    description: "Associates the message to a particular output by the index. If none are specified then the first input is assumed."
+    description: "Associates the message to a particular output by the index. If none are specified then the first output is assumed."
     type: uint[]
     size: 4
 
