Add "holdings locked" reject message code.

--- a/src/actions/develop/actions/M2 - Rejection.yaml
+++ b/src/actions/develop/actions/M2 - Rejection.yaml
@@ -24,7 +24,7 @@ metadata:
 fields:
   - name: AddressIndexes
     label: Address Indexes
-    description: "Associates the message to a particular output by the index."
+    description: "Associates the message to a particular output by the index. If none are specified then the first output is assumed."
     type: uint[]
     size: 4
 
